After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 787056 - realmedia : Fix Memory leak isse in asmrules
realmedia : Fix Memory leak isse in asmrules
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
1.12.2
Other Windows
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-31 06:29 UTC by Satya Prakash Gupta
Modified: 2017-08-31 18:28 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch file is attached. (719 bytes, patch)
2017-08-31 06:29 UTC, Satya Prakash Gupta
none Details | Review
Patch file is attached. (717 bytes, patch)
2017-08-31 07:46 UTC, Satya Prakash Gupta
committed Details | Review

Description Satya Prakash Gupta 2017-08-31 06:29:46 UTC
Created attachment 358814 [details] [review]
Patch file is attached.

Hi,


File : gst-plugins-ugly/gst/realmedia/asmrules.c

Function  gst_asm_scan_parse_property  Line : 544

There is memory leak in asmrules.c file as key was g_strdup before.

Solution : g_free (key);

++patch is attched for possible solution.

Kindly review the patch and provide your feedback.
Comment 1 Satya Prakash Gupta 2017-08-31 07:46:20 UTC
Created attachment 358818 [details] [review]
Patch file is attached.

updated patch file is attched
Comment 2 Tim-Philipp Müller 2017-08-31 18:28:03 UTC
Thanks, pushed:

commit 38b198255f37688bb15c26ecbfe2278c112b9e23 (HEAD -> master)
Author: Satya Prakash Gupta <sp.gupta@samsung.com>
Date:   Thu Aug 31 11:33:14 2017 +0530

    realmedia: fix leak in asmrules error code path
    
    https://bugzilla.gnome.org/show_bug.cgi?id=787056