realmedia: fix leak in asmrules error code path

https://bugzilla.gnome.org/show_bug.cgi?id=787056